[tool.poetry]
name = "nnfs"
version = "0.1.0"
description = "Sandbox of Neural Networks from Scratch"
authors = ["josiah-d <duhaimejosiah@gmail.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
